config/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: killallplayer-api
  labels:
    app: killallplayer-api
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: killallplayer-api
